# csvf

./: CMakeLists.txt  README.md  TODO.md
app/: CMakeLists.txt  csvf_combine.cpp  csvf_split.cpp
include/csvf/: CMakeLists.txt  combine.hpp  csvf.hpp  function_options.hpp  options.hpp  reader.hpp  split.hpp  writer.hpp
src/: BoostTestHelpers.cmake  CMakeLists.txt  combine.cpp  reader.cpp  split.cpp  writer.cpp
test/: BoostTestHelpers.cmake  CMakeLists.txt  combine_test.cpp  options_test.cpp  reader.cpp  reader_test.cpp  split_test.cpp  writer_test.cpp
test/data/: chunk.csv  chunk_uniformly.csv  combine1.csv  combine2.csv  combine3.csv  onecolumn.csv  sep_vline.csv  simple.csv  simple2.csv  testdata.csv
